# TextMiningProject

./: AUTHORS  CMakeLists.txt  README.md  subject.txt
doc/: Doxyfile
doc/html/: annotated.html  classDamereauLevenshtein-members.html  classDamereauLevenshtein.html  classNode-members.html  classNode.html  classPtrie-members.html  classPtrie.html  classReader-members.html  classReader.html  classes.html  damerauLevenshtein_8hh_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  ptrie_8hh_source.html  reader_8hh_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  classDamereauLevenshtein.tex  classNode.tex  classPtrie.tex  classReader.tex  refman.tex
src/: damerauLevenshtein.cc  damerauLevenshtein.hh  main.cc  parser.cc  parser.hh  ptrie.cc  ptrie.hh  reader.cc  reader.hh  test.txt
src/TextMiningApp/: main.cc
src/TextMiningCompiler/: main.cc
test/: test.cc
